# search-engine-project

./: README.md
search_engine/: CMakeLists.txt
search_engine/include/: ConverterJSON.h  FunctionsForUniqueWords.h  InvertedIndex.h  SearchServer.h
search_engine/jsons/: answers.json  config.json  requests.json
search_engine/resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
search_engine/sources/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
search_engine/tests/: CMakeLists.txt  index_tests.cpp  server_tests.cpp
